--- a/Assets/Codavore/Core/Tests/CodavoreCoreTests.asmdef
+++ b/Assets/Codavore/Core/Tests/CodavoreCoreTests.asmdef
@@ -7,10 +7,13 @@
         "TestAssemblies"
     ],
     "includePlatforms": [],
-    "excludePlatforms": [],
+    "excludePlatforms": [
+        "WindowsStandalone32",
+        "WindowsStandalone64"
+    ],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
+    "autoReferenced": false,
     "defineConstraints": []
 }
